[package]
name = "billsub-timeline"
version = "1.0.0"
description = "Bill and Subscription Timeline Tracker"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }

